Revised makefile to incorporate vars and compile Server driver source
The make file now contains special variables to be slightly dynamic and interchangeable if needed.  The biggest influence was to allow 'absolute' directories which we can pin-point where our source files are located without worrying about relative path issues.

--- a/Source/makefile
+++ b/Source/makefile
@@ -1,10 +1,30 @@
+# Capture the current directory of the make file
+# =====================================================
+DIR := ${CURDIR}
+
+# Compiler and Compiler Args (default)
+# =====================================================
+compiler := cc
+compilerArg := -o
+
+# Server files
+# =====================================================
+svDriver := $(DIR)/Server/Driver.c
+
+# Client files
+# =====================================================
+
+
+# Main Make Operation
+# =====================================================
 ALL: server client
-server: Driver.c
-    @echo Compiling Server Build. . .
-    @echo Successfully Compiled Build!
+server: $(svDriver)
+	@echo Compiling Server Build. . .
+	$(compiler) $(compilerArg) server $(svDriver)
+	@echo Successfully Compiled Build!
 client: Driver.c
-    @echo Compiling Client Build. . .
-    @echo Successfully Compiled Build!
+	@echo Compiling Client Build. . .
+	@echo Successfully Compiled Build!
 clean:
-    @echo Thrashing Compiled Builds. . .
-    @echo Successfully Expunged Binary Builds!
+	@echo Thrashing Compiled Builds. . .
+	@echo Successfully Expunged Binary Builds!
