Made a new var for server output file
I've decided to change the output file as a variable instead.  Nothing else really changes.

--- a/Source/makefile
+++ b/Source/makefile
@@ -9,6 +9,7 @@ compilerArg := -o
 
 # Server files
 # =====================================================
+svOutput := server.binary
 svDriver := $(DIR)/Server/Driver.c
 
 # Client files
@@ -20,7 +21,7 @@ svDriver := $(DIR)/Server/Driver.c
 ALL: server client
 server: $(svDriver)
 	@echo Compiling Server Build. . .
-	$(compiler) $(compilerArg) server.binary $(svDriver)
+	$(compiler) $(compilerArg) $(svOutput) $(svDriver)
 	@echo Successfully Compiled Build!
 client: Driver.c
 	@echo Compiling Client Build. . .
