Added server.binary to 'clean' sub-routine
Added the server executable to the 'clean' sub-routine in the makefile.

--- a/Source/makefile
+++ b/Source/makefile
@@ -28,4 +28,5 @@ client: Driver.c
 	@echo Successfully Compiled Build!
 clean:
 	@echo Thrashing Compiled Builds. . .
+	rm $(svOutput)
 	@echo Successfully Expunged Binary Builds!
