Forgot to revert this change
I previously set this to 'show' the command for debugging purposes.  I forgot to re-hide the command.

--- a/Source/makefile
+++ b/Source/makefile
@@ -27,7 +27,7 @@ svDriver := $(DIR)/Server/Driver.c
 ALL: server client
 server: $(shComFun) $(svDriver)
 	@echo Compiling Server Build. . .
-	$(compiler) $(compilerArg) $(svOutput) -I $(shDir) $(shComFun) $(shMyUNP) $(svDriver)
+	@$(compiler) $(compilerArg) $(svOutput) -I $(shDir) $(shComFun) $(shMyUNP) $(svDriver)
 	@echo Successfully Compiled Build!
 client: Driver.c
 	@echo Compiling Client Build. . .
