Started to separate the code; organization
Hopefully this should make organizing the code a bit better, hopefully.

--- a/Source/makefile
+++ b/Source/makefile
@@ -19,6 +19,7 @@ shMyUNP := $(shDir)/myunp.h
 svOutput := server.binary
 svDir := $(DIR)/Server
 svDriver := $(svDir)/Driver.c
+svProgInfo := $(svDir)/ProgInformation.c
 
 # Client files
 # =====================================================
@@ -29,7 +30,7 @@ svDriver := $(svDir)/Driver.c
 ALL: server client
 server:
 	@echo Compiling Server Build. . .
-	@$(compiler) $(compilerArg) $(svOutput) -I $(shDir) -I $(svDir) $(shComFun) $(svDriver)
+	@$(compiler) $(compilerArg) $(svOutput) -I $(shDir) -I $(svDir) $(shComFun) $(svProgInfo) $(svDriver)
 	@echo Successfully Compiled Build!
 client: Driver.c
 	@echo Compiling Client Build. . .
