--- a/Source/makefile
+++ b/Source/makefile
@@ -22,6 +22,7 @@ svDriver := $(svDir)/Driver.c
 svProgInfo := $(svDir)/ProgInformation.c
 svGameLL := $(svDir)/GameLinkedList.c
 svCustomerLL := $(svDir)/CustomerLinkedList.c
+svWelcome := $(svDir)/Welcome.c
 
 # Client files
 # =====================================================
@@ -32,7 +33,7 @@ svCustomerLL := $(svDir)/CustomerLinkedList.c
 ALL: server client
 server:
 	@echo Compiling Server Build. . .
-	@$(compiler) $(compilerArg) $(svOutput) -I $(shDir) -I $(svDir) $(shComFun) $(svProgInfo) $(svGameLL) $(svCustomerLL) $(svDriver)
+	@$(compiler) $(compilerArg) $(svOutput) -I $(shDir) -I $(svDir) $(shComFun) $(svProgInfo) $(svGameLL) $(svCustomerLL) $(svWelcome) $(svDriver)
 	@echo Successfully Compiled Build!
 client: Driver.c
 	@echo Compiling Client Build. . .
