Client can be compiled via Make
There might be some compile issues with the source files, but it is unrelated to the makefile itself - it works as intended.

--- a/Source/makefile
+++ b/Source/makefile
@@ -28,7 +28,10 @@ svUpdateUsrInfo := $(svDir)/UpdateUserAccount.c
 
 # Client files
 # =====================================================
-
+clOutput := client.binary
+clDir := $(DIR)/Client
+clDriver := $(clDir)/Driver.c
+clComm := $(clDir)/Comm.c
 
 # Main Make Operation
 # =====================================================
@@ -37,10 +40,11 @@ server:
 	@echo Compiling Server Build. . .
 	@$(compiler) $(compilerArg) $(svOutput) -I $(shDir) -I $(svDir) $(shComFun) $(svProgInfo) $(svGameLL) $(svCustomerLL) $(svWelcome) $(svMainMenu) $(svUpdateUsrInfo) $(svDriver)
 	@echo Successfully Compiled Build!
-client: Driver.c
+client:
 	@echo Compiling Client Build. . .
+	@$(compiler) $(compilerArg) $(clOutput) -I $(shDir) -I $(clDir) $(clComm) $(clDriver)
 	@echo Successfully Compiled Build!
 clean:
 	@echo Thrashing Compiled Builds. . .
-	@rm $(svOutput)
+	@rm $(svOutput) $(clOutput)
 	@echo Successfully Expunged Binary Builds!
