Compile using strictly this Standard!
This is the default standard for my systems, however Cameron University is using c++98; I want to be a bit lazy :)

--- a/Source/makefile
+++ b/Source/makefile
@@ -5,7 +5,7 @@ DIR := ${CURDIR}
 # Compiler and Compiler Args (default)
 # =====================================================
 compiler := cc
-compilerArg := -o
+compilerArg := -std=gnu11 -o
 
 # Shared files
 # =====================================================
